<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UPGRADE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Title">UpGrade</string>
    <string name="empty_class" />
    <string name="empty_text" />
    <string name="title_activity_load_content">LoadContent</string>
    <string name="class_list_button">Class List</string>
    <string name="logo">logo</string>
    <string name="title_activity_add_class">AddClassActivity</string>
    <string name="add_class">Add Class</string>
    <string name="class_name">Enter Class Name</string>
    <string name="title_activity_class_display">ClassDisplay</string>
    <string name="title_activity_link_grade_source">LinkGradeSource</string>
    <string name="gradesource_prompt">Please Enter Your Gradesource webpage and secret number.</string>
    <string name="gradesource_link">Grade Source Link</string>
    <string name="gradesource_number">Grade Source Number</string>
    <string name="go">Go</string>
    <string name="class_name_display">Class Name</string>
    <string name="section_name">Section Name</string>
    <string name="section_grade">Section Grade</string>
    <string name="name">Name</string>
    <string name="grade">Grade</string>
    <string name="title_activity_grade_section_detailed">GradeSectionDetailed</string>

</resources>
