<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.activities.upgrade.LinkGradeSource"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="95dp"
        android:text="@string/gradesource_prompt" />

    <EditText
        android:id="@+id/link_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/gradesource_link" />

    <EditText
        android:id="@+id/number_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/link_editText"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/gradesource_number"
        android:inputType="number" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="16dp"
        android:background="@drawable/textback"
        android:onClick="onClick"
        android:text="@string/go" />

</RelativeLayout>